<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.StoreDetailActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:adjustViewBounds="true"
            android:background="#f4f4f4"
            android:contentDescription="@null"
            android:src="@drawable/baseline_photo_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/constraint"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="-16dp"
            android:background="@drawable/bg_corner_top"
            android:elevation="20dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_preview">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/market_stand_svgrepo_com"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="#222222"
                app:layout_constraintBottom_toBottomOf="@id/imageView5"
                app:layout_constraintStart_toEndOf="@id/imageView5"
                app:layout_constraintTop_toTopOf="@id/imageView5"
                tools:text="MARET APRIL" />

            <LinearLayout
                android:id="@+id/ll_stat_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/store_id_t_t_t_t_t"
                        android:textColor="#222222"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_store_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="18"
                        android:textSize="12sp"
                        tools:text="SAT000001" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/address_t_t_t_t_t"
                        android:textColor="#222222"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="18"
                        android:textSize="12sp"
                        tools:text="Address value" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/area_name_t_t"
                        android:textColor="#222222"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_area_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="18"
                        android:textSize="12sp"
                        tools:text=" Area Name value" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/dc_name_t_t_t_t"
                        android:textColor="#222222"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_dc_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="18"
                        android:textSize="12sp"
                        tools:text="DC Name value" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/region_name"
                        android:textColor="#222222"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_region_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="18"
                        android:textSize="12sp"
                        tools:text=" Region Name value" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/visit_date"
                        android:textColor="#222222"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_date_visit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="18"
                        android:text="@string/not_visited_yet"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_verified"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/ll_stat_detail"
                app:layout_constraintTop_toBottomOf="@id/ll_stat_detail">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/iv_check_picture"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@null"
                        android:src="@drawable/baseline_close_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/take_the_picture_first"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/iv_check_location"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@null"
                        android:src="@drawable/baseline_done_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/the_location_must_be_within_100_meters"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_visit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_btn_login"
                android:text="@string/visit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_verified" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/iv_take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#735F32"
                android:contentDescription="@string/take_picture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/baseline_photo_camera_24"
                app:tint="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/iv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#735F32"
                android:contentDescription="@string/take_location"
                app:layout_constraintBottom_toTopOf="@id/iv_take_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/baseline_my_location_24"
                app:tint="@color/white" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>